Basic Home page done

--- a/mywebsite/templates/home.html
+++ b/mywebsite/templates/home.html
@@ -1,5 +1,32 @@
-{% extends "base.html" %}
-
-{% block content %}
-    
+{% extends "base.html" %} {% block content %}
+<div>
+  <center>
+    <h1>Anuraag Reddy Patllollu</h1>
+  </center>
+</div>
+<div>
+  <p>
+    I'm Anuraag Reddy Patllollu, a computer science graduate student at
+    <a href="https://www.stonybrook.edu/"> Stony Brook University </a> with a Bachelor's from the
+    <a href="https://iittp.ac.in/">Indian Institute of Technology, Tirupati</a>. I am currently a
+    member of the <a href="https://www.fsl.cs.stonybrook.edu/">File Systems and Storage Lab</a>
+  </p>
+  <p>
+    Currently, I'm engaged as a Graduate Research Assistant, contributing to the
+    <a href="https://wrapfs.filesystems.org/">Wrapfs</a> project under
+    <a href="https://www3.cs.stonybrook.edu/~ezk/">Prof. Erez Zadok</a>'s guidance.
+  </p>
+  <p>
+    I am interested in pretty much all of computer science. I love working with new technologies and
+    just exploring a new domain. I think of myself as a jack of all trades (and hopefully be a
+    master in all of them!). I have worked on many projects spanning multiple domains from machine
+    learning to systems architecture. I am still learning so I try to make the most of the
+    opportunities I am given. I am always looking for collaborations. If interested shoot me an
+    email!
+  </p>
+  <p>
+    Aside from coding, I usually spend my time either reading books (currently reading Hotel by
+    Arthur Hailey) or playing videogames. I occasionally play the keyboard too!
+  </p>
+</div>
 {% endblock content %}
