--- a/mywebsite/templates/base.html
+++ b/mywebsite/templates/base.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     {% include 'partials/__header.html' %}
-    {% block content %}
-    
-    {% endblock content %}
-</body>
+    <main>{% block content %} {% endblock content %}</main>
+  </body>
+  <footer>
+    Socials
+    <ul>
+      <li><a href="https://www.linkedin.com/in/anuraag-reddy-p/"> LinkedIn </a></li>
+      <li><a href="https://github.com/AnuraagReddy123/"> Github </a></li>
+      <li><a href="mailto:anuraagreddy.patllollu@stonybrook.edu"> Email </a></li>
+    </ul>
+  </footer>
 </html>
