--- a/mywebsite/templates/base.html
+++ b/mywebsite/templates/base.html
@@ -3,17 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Anuraag Reddy Patllollu</title>
   </head>
   <body>
     {% include 'partials/__header.html' %}
     <main>{% block content %} {% endblock content %}</main>
+    <hr />
   </body>
   <footer>
     Socials
     <ul>
-      <li><a href="https://www.linkedin.com/in/anuraag-reddy-p/"> LinkedIn </a></li>
-      <li><a href="https://github.com/AnuraagReddy123/"> Github </a></li>
+      <li><a href="https://www.linkedin.com/in/anuraag-reddy-p/" target="_blank"> LinkedIn </a></li>
+      <li><a href="https://github.com/AnuraagReddy123/" target="_blank"> Github </a></li>
       <li><a href="mailto:anuraagreddy.patllollu@stonybrook.edu"> Email </a></li>
     </ul>
   </footer>
