--- a/mywebsite/templates/home.html
+++ b/mywebsite/templates/home.html
@@ -4,9 +4,10 @@
     <h1>Anuraag Reddy Patllollu</h1>
   </center>
 </div>
+<hr />
 <div>
   <p>
-    I'm Anuraag Reddy Patllollu, a computer science graduate student at
+    I'm Anuraag, a computer science graduate student at
     <a href="https://www.stonybrook.edu/"> Stony Brook University </a> with a Bachelor's from the
     <a href="https://iittp.ac.in/">Indian Institute of Technology, Tirupati</a>. I am currently a
     member of the <a href="https://www.fsl.cs.stonybrook.edu/">File Systems and Storage Lab</a>
@@ -17,10 +18,10 @@
     <a href="https://www3.cs.stonybrook.edu/~ezk/">Prof. Erez Zadok</a>'s guidance.
   </p>
   <p>
-    I am interested in pretty much all of computer science. I love working with new technologies and
-    just exploring a new domain. I think of myself as a jack of all trades (and hopefully be a
+    I am interested in pretty much all of computer science. I love tinkering with new technologies
+    and just exploring new domains. I think of myself as a jack of all trades (and hopefully be a
     master in all of them!). I have worked on many projects spanning multiple domains from machine
-    learning to systems architecture. I am still learning so I try to make the most of the
+    learning to systems architecture. I am still learning, so I try to make the most of the
     opportunities I am given. I am always looking for collaborations. If interested shoot me an
     email!
   </p>
