--- a/mywebsite/templates/partials/__header.html
+++ b/mywebsite/templates/partials/__header.html
@@ -1,6 +1,7 @@
 <nav>
-    <ul>
-        <li><a href='/'>Home</a></li>
-        <li><a href='/projects'>Projects</a></li>
-    </ul>
+  <ul>
+    <li><a href="/">Home</a></li>
+    <li><a href="/projects">Projects</a></li>
+    <li><a href="/experience">Experience</a></li>
+  </ul>
 </nav>
