--- a/mywebsite/templates/experience.html
+++ b/mywebsite/templates/experience.html
@@ -43,7 +43,7 @@
 </div>
 <hr />
 <div>
-  <h2>Tech Skills</h2>
+  <h2>Technical Skills</h2>
   <ul>
     <li><b>Languages:</b> C, C++, Python, Java, Javascript, SQL, NoSQL Rust</li>
     <li><b>Technologies:</b> Node.js, ReactJs, Django</li>
@@ -51,5 +51,55 @@
     <li><b>Libraries:</b> PyTorch, Tensorflow, Sci-kit Learn</li>
   </ul>
 </div>
-
+<hr />
+<div>
+  <h2>Work Experience</h2>
+  <ul>
+    <li>
+      <h3>
+        Graduate Research Assistant,
+        <a href="https://www.fsl.cs.stonybrook.edu/" target="_blank"> File System Storage Lab </a>
+      </h3>
+      <ul>
+        <li>
+          Focusing on the porting of
+          <a href="https://wrapfs.filesystems.org/" target="_blank">Wrapfs</a> from one Linux
+          version to another.
+        </li>
+        <li>Installed and configured OS’s (Centos , Ubuntu) to run wrapfs</li>
+        <li>
+          Conducted tests on the file system using the xfstest library suite and custom bash scripts
+        </li>
+      </ul>
+    </li>
+    <li>
+      <h3>
+        Machine Learning Intern, <a href="https://aiensured.com/" , target="_blank">aiEnsured</a>
+      </h3>
+      <ul>
+        <li>
+          Designed and deployed chatbots using RASA and Google DialogFlow, applying testing
+          techniques to guarantee functionality and reliability.
+        </li>
+        <li>
+          Authored an article for the company blog, delineating key differences among leading
+          chatbot platforms, enhancing industry knowledge.
+        </li>
+        <li>
+          Implemented a BERT-based text classifier within aiEnsured’s text pipeline, bolstering
+          product capabilities.
+        </li>
+      </ul>
+    </li>
+  </ul>
+</div>
+<hr />
+<div>
+  <h2>Certifications</h2>
+  <ul>
+    <li>Developing Back-End Apps with Node.js and Express Certificate from IBM Coursera 2024</li>
+    <li>Node.js & MongoDB: Developing Back-end Database Applications from IBM Coursera 2024</li>
+    <li>Django Web Framework from Meta Coursera 2024</li>
+  </ul>
+</div>
 {% endblock content %}
