Added link to website

--- a/mywebsite/templates/projects.html
+++ b/mywebsite/templates/projects.html
@@ -25,7 +25,7 @@
     </li>
     <li>
       <h3>
-        <a href="https://github.com/AnuraagReddy123/My-Website"> This website! </a>
+        <a href="https://github.com/AnuraagReddy123/My-Website" target="_blank"> This website! </a>
       </h3>
       <p>Tech Stack: Python, Django</p>
       <p>
