Revert "Merge branch 'main' into prod"
This reverts commit 26028508efe0740f92ff0bee00353a394859e8a8, reversing
changes made to 8ffd84955580368331ff098e6c68d67d87b60cb3.

--- a/mywebsite/templates/home.html
+++ b/mywebsite/templates/home.html
@@ -7,7 +7,7 @@
 <hr />
 <div>
   <p>
-    Hi I'm Anuraag! A computer science graduate student at
+    I'm Anuraag, a computer science graduate student at
     <a href="https://www.stonybrook.edu/"> Stony Brook University </a> with a Bachelor's from the
     <a href="https://iittp.ac.in/">Indian Institute of Technology, Tirupati</a>. I am currently a
     member of the <a href="https://www.fsl.cs.stonybrook.edu/">File Systems and Storage Lab</a>
