Added some more projects

--- a/mywebsite/templates/home.html
+++ b/mywebsite/templates/home.html
@@ -8,14 +8,16 @@
 <div>
   <p>
     Hi I'm Anuraag! A computer science graduate student at
-    <a href="https://www.stonybrook.edu/"> Stony Brook University </a> with a Bachelor's from the
-    <a href="https://iittp.ac.in/">Indian Institute of Technology, Tirupati</a>. I am currently a
-    member of the <a href="https://www.fsl.cs.stonybrook.edu/">File Systems and Storage Lab</a>
+    <a href="https://www.stonybrook.edu/" target="_blank"> Stony Brook University </a> with a
+    Bachelor's from the
+    <a href="https://iittp.ac.in/" target="_blank">Indian Institute of Technology, Tirupati</a>. I
+    am currently a member of the
+    <a href="https://www.fsl.cs.stonybrook.edu/" target="_blank">File Systems and Storage Lab</a>
   </p>
   <p>
     Currently, I'm engaged as a Graduate Research Assistant, contributing to the
-    <a href="https://wrapfs.filesystems.org/">Wrapfs</a> project under
-    <a href="https://www3.cs.stonybrook.edu/~ezk/">Prof. Erez Zadok</a>'s guidance.
+    <a href="https://wrapfs.filesystems.org/" target="_blank">Wrapfs</a> project under
+    <a href="https://www3.cs.stonybrook.edu/~ezk/" target="_blank">Prof. Erez Zadok</a>'s guidance.
   </p>
   <p>
     I am interested in pretty much all of computer science. I love tinkering with new technologies
