--- a/mywebsite/templates/projects.html
+++ b/mywebsite/templates/projects.html
@@ -25,6 +25,21 @@
     </li>
     <li>
       <h3>
+        <a href="https://github.com/AnuraagReddy123/Save-Environment" target="_blank">
+          Save Environment
+        </a>
+      </h3>
+      <p>Tech Stack: Javascript, ReactJS, Node.js, Express.js, MongoDB, REST API</p>
+      <p>
+        This website has been created as an attempt to tackle the problem of Climate Action which is
+        a part of United Nations Sustainable Development Goals. The website is intended to be used
+        by general people where they will be provided with ways in which they can save money while
+        also indirectly saving the environment. This will also create awareness of different ways to
+        save the environment.
+      </p>
+    </li>
+    <li>
+      <h3>
         <a href="https://github.com/AnuraagReddy123/My-Website" target="_blank"> This website! </a>
       </h3>
       <p>Tech Stack: Python, Django</p>
@@ -168,6 +183,22 @@
         and highest/lowest marks. In addition we designed features for dynamic user and faculty
         management, supporting different users at the operating system level. (Admin, Students,
         Faculty) and utilized file operations to read and write data.
+      </p>
+    </li>
+  </ul>
+</div>
+<div>
+  <h2>Games</h2>
+  <ul>
+    <li>
+      <h3>
+        <a href="https://simmer.io/@AVortex74/save-hyenas" target="_blank">Save the Hyenas!</a>
+      </h3>
+      <p>Tech Stack: C#, Unity</p>
+      <p>
+        Made a user-friendly 2D platformer game with easy levels and a simple storyline through
+        which the player can understand how an endangered animal is trying to survive in a world
+        with threats like poachers and hunters.
       </p>
     </li>
   </ul>
