--- a/mywebsite/templates/projects.html
+++ b/mywebsite/templates/projects.html
@@ -101,7 +101,7 @@
       </h3>
       <p>Tech Stack: Python, PyTorch, BERT, spaCy</p>
       <p>
-        I worked in a team to conduct sentiment analysis on the r/travel subreddit using
+        Worked in a team to conduct sentiment analysis on the r/travel subreddit using
         Huggingface’s Reddit dataset, focusing on pre-Covid and during-Covid periods. After
         preprocessing the dataset, implementing spaCy’s lemmatization and resolving name variations
         for data quality and coherence, we applied the RoBERTa model for sentiment analysis and
@@ -130,7 +130,7 @@
       </h3>
       <p>Tech Stack: Python</p>
       <p>
-        I created a Tic-Tac-Toe game using reinforcement learning techniques in python and
+        Created a Tic-Tac-Toe game using reinforcement learning techniques in python and
         programmed three distinct AI opponents, each employing its unique learning approaches:
         Value-based iteration, policy-based iteration, and Q-learning and trained and assessed these
         agents in playing Tic-Tac-Toe against human opponents.
@@ -214,7 +214,7 @@
       </h3>
       <p>Tech Stack: Java, Kotlin, JUnit</p>
       <p>
-        I worked with the Bigbone team to implement the Announcement API. It involved creating
+        Worked with the Bigbone team to implement the Announcement API. It involved creating
         entities that were returned by the API and methods corresponding to the various announcement
         APIs and writing tests in junit to validate the code.
       </p>
@@ -227,7 +227,7 @@
       </h3>
       <p>Tech Stack: Python, Firebase</p>
       <p>
-        I worked with the Codemark team to add a feature that enables users to create new user
+        Worked with the Codemark team to add a feature that enables users to create new user
         profiles directly from the command line interface (CLI). The users can be either students or
         professors.
       </p>
