--- a/mywebsite/templates/projects.html
+++ b/mywebsite/templates/projects.html
@@ -149,7 +149,7 @@
       </h3>
       <p>Tech Stack: Python, MIPS</p>
       <p>
-        I worked in a team to build a simulator for MIPS language to better understand assembly
+        Worked in a team to build a simulator for MIPS language to better understand assembly
         instructions and the instruction pipeline in computer architecture. We designed and
         implemented a pipeline structure and simulated a set of instructions for MIPS. We also
         implemented an LRU cache to see how it affects the number of stalls and cycles per
@@ -162,7 +162,7 @@
       </h3>
       <p>Tech Stack: C, Lex, Yacc, MIPS</p>
       <p>
-        I worked on a team to design a new C-like language called NHAN, for which we built a
+        Worked in a team to design a new C-like language called NHAN, for which we built a
         compiler using C. It supported arrays, functions and recursive functions. It used an
         Abstract Syntax Tree(AST) as an intermediate representation and generated MIPS code as its
         output. This MIPS code could be run on qtSpim to generate output.
@@ -176,7 +176,7 @@
       </h3>
       <p>Tech Stack: C++, FreeBSD</p>
       <p>
-        I worked on a team to design and implement a console-based C++ program for managing student
+        Worked on a team to design and implement a console-based C++ program for managing student
         marks data based on the
         <a href="https://viewsourcecode.org/snaptoken/kilo/index.html" target="_blank">kilo</a> text
         editor for the FreeBSD kernel and Implemented statistical analysis, including average marks
